--- a/Xesa-Internal/Xesa-Internal.vcxproj.filters
+++ b/Xesa-Internal/Xesa-Internal.vcxproj.filters
@@ -24,6 +24,12 @@
     <Filter Include="Quelldateien\imgui\impl">
       <UniqueIdentifier>{c1e8018a-cf49-4f36-90c8-676365389420}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Headerdateien\features">
+      <UniqueIdentifier>{a110dc9a-28ae-4f40-be91-031bc4a34c23}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Quelldateien\features">
+      <UniqueIdentifier>{cf466ac2-0e9c-43eb-b848-8e30a63cfdda}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -55,6 +61,9 @@
     </ClCompile>
     <ClCompile Include="imgui\impl\imgui_impl_dx9.cpp">
       <Filter>Quelldateien\imgui\impl</Filter>
+    </ClCompile>
+    <ClCompile Include="features\Misc.cpp">
+      <Filter>Quelldateien\features</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -141,6 +150,9 @@
     </ClInclude>
     <ClInclude Include="Menu.h">
       <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="features\Misc.h">
+      <Filter>Headerdateien\features</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
