--- a/Xesa-Internal/Xesa-Internal.vcxproj
+++ b/Xesa-Internal/Xesa-Internal.vcxproj
@@ -171,6 +171,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Config.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="features\Misc.cpp" />
     <ClCompile Include="Hooks.cpp" />
@@ -185,6 +186,7 @@
     <ClCompile Include="vfunc_hook.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Config.h" />
     <ClInclude Include="features\Misc.h" />
     <ClInclude Include="Hooks.h" />
     <ClInclude Include="imgui\imconfig.h" />
