--- a/Xesa-Internal/Xesa-Internal.vcxproj
+++ b/Xesa-Internal/Xesa-Internal.vcxproj
@@ -181,6 +181,7 @@
     <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="imgui\impl\imgui_impl_dx9.cpp" />
     <ClCompile Include="imgui\impl\imgui_impl_win32.cpp" />
+    <ClCompile Include="Interfaces.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="NetVars.cpp" />
     <ClCompile Include="Utils.cpp" />
