--- a/Xesa-Internal/Xesa-Internal.vcxproj
+++ b/Xesa-Internal/Xesa-Internal.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="Config.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="features\Glow.cpp" />
+    <ClCompile Include="features\LagCompensation.cpp" />
     <ClCompile Include="features\Misc.cpp" />
     <ClCompile Include="Hooks.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
@@ -190,6 +191,7 @@
   <ItemGroup>
     <ClInclude Include="Config.h" />
     <ClInclude Include="features\Glow.h" />
+    <ClInclude Include="features\LagCompensation.h" />
     <ClInclude Include="features\Misc.h" />
     <ClInclude Include="Hooks.h" />
     <ClInclude Include="imgui\imconfig.h" />
