--- a/Xesa-Internal/Xesa-Internal.vcxproj.filters
+++ b/Xesa-Internal/Xesa-Internal.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClCompile Include="Interfaces.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="features\LagCompensation.cpp">
+      <Filter>Quelldateien\features</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Singleton.h">
@@ -213,6 +216,9 @@
     </ClInclude>
     <ClInclude Include="SDK\ClientFrameStage.h">
       <Filter>Headerdateien\SDK</Filter>
+    </ClInclude>
+    <ClInclude Include="features\LagCompensation.h">
+      <Filter>Headerdateien\features</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
