--- a/Xesa-Internal/Xesa-Internal.vcxproj.filters
+++ b/Xesa-Internal/Xesa-Internal.vcxproj.filters
@@ -74,9 +74,6 @@
     <ClCompile Include="NetVars.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="Config.cpp">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
     <ClCompile Include="features\Glow.cpp">
       <Filter>Quelldateien\features</Filter>
     </ClCompile>
@@ -91,9 +88,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Singleton.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
     <ClInclude Include="SDK\ConVar.h">
       <Filter>Headerdateien\SDK</Filter>
     </ClInclude>
@@ -230,6 +224,9 @@
       <Filter>Headerdateien\features</Filter>
     </ClInclude>
     <ClInclude Include="utils\TimeHelper.h">
+      <Filter>Headerdateien\utils</Filter>
+    </ClInclude>
+    <ClInclude Include="utils\Singleton.h">
       <Filter>Headerdateien\utils</Filter>
     </ClInclude>
   </ItemGroup>
